<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_recent"
            android:icon="@drawable/timelapse"
            android:title="@string/recent" />
        <item
            android:id="@+id/nav_dial"
            android:icon="@mipmap/ic_dialpad_black_24dp"
            android:title="@string/dial" />
        <item
            android:id="@+id/nav_myCards"
            android:icon="@mipmap/ic_card_membership_black_24dp"
            android:title="@string/my_cards" />
        <item
            android:id="@+id/nav_newCard"
            android:icon="@mipmap/ic_fiber_new_black_24dp"
            android:title="New Calling Card" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />
        </menu>
    </item>

</menu>
